--- a/package.json
+++ b/package.json
@@ -14,8 +14,6 @@
         "start": "node index.js"
     },
     "devDependencies": {
-        "@types/node": "*",
-        "prettier": "*",
-        "tsx": "*"
+        "@types/node": "*"
     }
 }
